--- a/SignUpcopy.html
+++ b/SignUpcopy.html
@@ -16,7 +16,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/stylecopy.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body class="">
@@ -122,7 +122,8 @@
               </p>
             </div>
           </div>
-          <div class="footer-images text-center">
+          <div class="footer-images">
+            
             <img
               src="/assets/images/home/sumsung.svg"
               width="100px"
@@ -147,13 +148,12 @@
               class="curve-vector"
               alt=""
             />
-            <div class="footer-end">
-              <p>See why 2,000,000+ teams are more productive with ARCerp</p>
-            </div>
+          </div>
+          <div class="footer-end text-center">
+            <p>See why 2,000,000+ teams are more productive with ARCerp</p>
           </div>
         </form>
       </main>
-      <footer class="visibility-none"></footer>
     </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
