--- a/multi-step.html
+++ b/multi-step.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/npm/segoe-fonts@1.0.1/segoe-fonts.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="assets/css/index4.css" />
-    <link rel="stylesheet" href="assets/css/multistep.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
@@ -28,7 +26,7 @@
                     <div class="modal-body d-flex justify-content-center p-0">
                         <!-- Step 1 -->
                         <div class="form1 multistepform">
-                            <h1 class="fieldset-heading">What would you like to use ClickUp for?</h1>
+                            <h1 class="fieldset-heading">What would you like to use ARCerp for?</h1>
                             <div class="button_desgin1">
                                 <label>
                                     <input type="radio" name="usage" id="work" />
@@ -310,10 +308,10 @@
                     </div>
                     <div class="gradient-border"></div>
                     <div class="modal-footer border-0">
-                        <button type="button" class="btn btn-White back" id="backButton">
+                        <button type="button" class="btn-2 back" id="backButton">
                             &lt; Back
                         </button>
-                        <button type="button" class="btn btn-White" id="nextButton">
+                        <button type="button" class="btn " id="nextButton">
                             Next &gt;
                         </button>
 
@@ -332,8 +330,9 @@
                     </div>
                     <div class="content">
                         <div>
-                            <h1>Welcome To ClickUp!</h1>
-                            <p>Watch this quick video to know how ClickUp can transform your productivity.</p>
+                            <h1>Welcome to ARCerp!</h1>
+                            <p>Watch this quick video to know how ARCerp
+                                can transform your productivity.</p>
                             <div class="d-flex justify-content-center">
                                 <a href="" class="watch-video">Watch Video</a>
                             </div>
@@ -402,16 +401,6 @@
         // Attach event handlers to buttons
         $('#nextButton').click(nextStep);
         $('#backButton').click(previousStep);
-    </script>
-
-    <script>
-        function w3_open() {
-            document.getElementById("mySidebar").style.display = "block";
-        }
-
-        function w3_close() {
-            document.getElementById("mySidebar").style.display = "none";
-        }
     </script>
 
 
