four-milestone-complete

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <a class="nav-link" href="signup.html">Signup</a>
                     <a class="nav-link" href="forgetpassword.html">Forget Password</a>
                     <a class="nav-link" href="multi-step.html">Multi Step</a>
+                    <a class="nav-link" href="home.html">Home Page</a>
                 </nav>
             </div>
             <div class="tab-pane" id="milestone2" role="tabpanel" aria-labelledby="milestone2-tab">
