--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 
 
 
-          <form class="d-flex mx-auto gap-2 nav-form ">
+          <form class="d-flex mx-auto gap-2 nav-form justify-content-center">
 
 
 
@@ -81,7 +81,7 @@
               <span>Ask AI</span>
             </button>
           </form>
-          <div class="d-flex nav-end-side">
+          <div class="d-flex nav-end-side justify-content-center ">
             <ul class="navbar-end_button mb-0">
               <button class="mx-1" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                 <img src="assets/images/add.png" alt="" /><span> New </span>
