--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -23,7 +23,7 @@
                 <img src="./images/Arcerp_final 1.png" alt="Logo" class="img-fluid" />
                 <div class="d-flex align-items-center">
                     <p class="mb-0">Don't have an account?</p>
-                    <a href="" class="btn">Sign up</a>
+                    <a href="signup.html" class="btn">Sign up</a>
                 </div>
             </div>
         </header>
