--- a/search.html
+++ b/search.html
@@ -16,9 +16,10 @@
 
 <body>
     <div class="modal fade overflow-hidden" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
-        aria-hidden="true">
+        aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog  h-100 d-flex align-items-center mt-0" role="document">
             <div class="modal-content">
+                <button type="button" class="bg-transparent border-0 close-btn text-danger " data-bs-dismiss="modal">x</button>
                 <div class="modal-body p-0">
                     <div class="d-flex">
                         <div class="search-side">
