--- a/signup.html
+++ b/signup.html
@@ -22,8 +22,8 @@
       <div class="d-flex justify-content-between align-items-center">
         <img src="./images/Arcerp_final 1.png" alt="Logo" class="img-fluid" />
         <div class="d-flex align-items-center">
-          <p class="mb-0">Don't have an account?</p>
-          <a href="" class="btn">Sign up</a>
+          <p class="mb-0">Already have an Account?</p>
+          <a href="login.html" class="btn">Login</a>
         </div>
       </div>
     </header>
