--- a/home.html
+++ b/home.html
@@ -678,7 +678,7 @@
                     <h5 >LineUp</h5>
                     <img src="/assets/images/home/idea.svg" width="20px" alt="" />
                   </div>
-                  <div class="d-flex  changing-button">
+                  <div class="d-flex  changing-button">g
                     <div class="four_image">
                       <img src="/assets/images/add.svg" width="20px" alt="" />
                       <img src="/assets/images/size.png" width="20px" alt="" />
