--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                         Milestone 2
                     </button>
                 </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="milestone3-tab" data-bs-toggle="tab" data-bs-target="#milestone3" type="button"
+                        role="tab" aria-controls="milestone3" aria-selected="false">
+                        Milestone 3
+                    </button>
+                </li>
             </ul>
          </div>
        
@@ -44,12 +50,24 @@
                     <a class="nav-link" href="signup.html">Signup</a>
                     <a class="nav-link" href="forgetpassword.html">Forget Password</a>
                     <a class="nav-link" href="multi-step.html">Multi Step</a>
-                    <a class="nav-link" href="home.html">Home Page</a>
                 </nav>
             </div>
             <div class="tab-pane" id="milestone2" role="tabpanel" aria-labelledby="milestone2-tab">
                 <nav class="nav justify-content-center  ">
                     <a class="nav-link" href="search.html">Search</a>
+                </nav>
+            </div>
+            <div class="tab-pane" id="milestone3" role="tabpanel" aria-labelledby="milestone3-tab">
+                <nav class="nav justify-content-center  ">
+                    <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link" href="addCards.html">Add Cards</a>
+                    <a class="nav-link" href="setting.html">Setttings</a>
+                    <a class="nav-link" href="standup.html">StandUp</a>
+                    <a class="nav-link" href="QuickLinks.html">Quick Links</a>
+                    <a class="nav-link" href="popup.html">PopUp</a>
+                    <a class="nav-link" href="notification.html">Notification</a>
+                    <a class="nav-link" href="writeStandUp.html">Write Stand Up</a>
+                    <a class="nav-link" href="profile.html">Profile</a>
                 </nav>
             </div>
         </div>
