--- a/notification.html
+++ b/notification.html
@@ -73,7 +73,7 @@
               <button class="mx-1" id="openSidebar-new" class="btn">
                 <img src="assets/images/check_navbar.svg" alt="Check" />
               </button>
-              <button class="mx-1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling3"
+              <button class="mx-1" type="button" id="notificationButton" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling3"
                 aria-controls="offcanvasScrolling">
                 <img src="assets/images/doc2.svg" alt="Documents" />
               </button>
@@ -1641,10 +1641,6 @@
 
 
               <div class="sidebar-add-card">
-                <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
-                  aria-controls="offcanvasScrolling">
-                  Enable body scrolling
-                </button>
 
                 <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                   id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -1786,9 +1782,6 @@
 
               <div class="dicount-modal-main">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn   " data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                  Launch demo modal
-                </button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -1897,9 +1890,9 @@
 
 
               <div class="WriteStandUp">
-                <button class="btn   " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling2"
+                <button class="btn   " id="writeStandUpModalBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling2"
                   aria-controls="offcanvasScrolling">
-                  profile
+                  writeStandUpModal
                 </button>
 
                 <div class="offcanvas offcanvas-end profile_sidebar" data-bs-scroll="true" data-bs-backdrop="false"
@@ -2084,6 +2077,11 @@
 
 
 
+  <script>
+    $(document).ready(function(){
+        $('#notificationButton').click();
+    })
+</script>
 
 </body>
 
