--- a/setting.html
+++ b/setting.html
@@ -1641,10 +1641,6 @@
 
 
               <div class="sidebar-add-card">
-                <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
-                  aria-controls="offcanvasScrolling">
-                  Enable body scrolling
-                </button>
 
                 <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                   id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -1785,10 +1781,6 @@
 
 
               <div class="dicount-modal-main">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn   " data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                  Launch demo modal
-                </button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -1897,10 +1889,6 @@
 
 
               <div class="WriteStandUp">
-                <button class="btn   " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling2"
-                  aria-controls="offcanvasScrolling">
-                  profile
-                </button>
 
                 <div class="offcanvas offcanvas-end profile_sidebar" data-bs-scroll="true" data-bs-backdrop="false"
                   tabindex="-1" id="offcanvasScrolling2" aria-labelledby="offcanvasScrollingLabel">
@@ -1911,7 +1899,7 @@
                         <span>Write StandUp</span>
                       </div>
                     </div>
-                    <div class="align-items-center d-flex gap-1">
+                    <div>
                       <button class="feedback_sidebar p-1 rounded-3">
                         Feedback <img src="/assets/images/home/arrowup.svg" alt="" />
                       </button>
@@ -2079,6 +2067,11 @@
       var reminderTab = new bootstrap.Tab(document.querySelector('#Doc-tab'));
       reminderTab.show();
     }
+  </script>
+  <script>
+    $(document).ready(function(){
+        $('#dropdownMenuButton1').click();
+    })
   </script>
   <script src="./js/script.js"></script>
 
