--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                         Milestone 3
                     </button>
                 </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="milestone4-tab" data-bs-toggle="tab" data-bs-target="#milestone4" type="button"
+                        role="tab" aria-controls="milestone4" aria-selected="false">
+                        Milestone 4
+                    </button>
+                </li>
             </ul>
          </div>
        
@@ -68,6 +74,11 @@
                     <a class="nav-link" href="notification.html">Notification</a>
                     <a class="nav-link" href="writeStandUp.html">Write Stand Up</a>
                     <a class="nav-link" href="profile.html">Profile</a>
+                </nav>
+            </div>
+            <div class="tab-pane" id="milestone4" role="tabpanel" aria-labelledby="milestone4-tab">
+                <nav class="nav justify-content-center  ">
+                    <a class="nav-link" href="inbox.html">Inbox</a>
                 </nav>
             </div>
         </div>
