--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="milestone1-tab" data-bs-toggle="tab" data-bs-target="#milestone1" type="button"
                         role="tab" aria-controls="milestone1" aria-selected="true">
-                        Milestone 1
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="milestone2-tab" data-bs-toggle="tab" data-bs-target="#milestone2" type="button"
-                        role="tab" aria-controls="milestone2" aria-selected="false">
-                        Milestone 2
+                        Milestone 1(Week 1)
                     </button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="milestone3-tab" data-bs-toggle="tab" data-bs-target="#milestone3" type="button"
                         role="tab" aria-controls="milestone3" aria-selected="false">
-                        Milestone 3
+                        Milestone 2(Week 2 + Week 3)
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="milestone2-tab" data-bs-toggle="tab" data-bs-target="#milestone2" type="button"
+                        role="tab" aria-controls="milestone2" aria-selected="false">
+                        Milestone 3(Week 4)
                     </button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="milestone4-tab" data-bs-toggle="tab" data-bs-target="#milestone4" type="button"
                         role="tab" aria-controls="milestone4" aria-selected="false">
-                        Milestone 4
+                        Milestone 4 (Week 5 + Week 6)
                     </button>
                 </li>
             </ul>
