--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
             <div class="tab-pane" id="milestone4" role="tabpanel" aria-labelledby="milestone4-tab">
                 <nav class="nav justify-content-center  ">
                     <a class="nav-link" href="inbox.html">Inbox</a>
+                    <a class="nav-link" href="invite.html">Invite People</a>
+                    <a class="nav-link" href="ARCerpBrain.html">ARCerpBrain</a>
+                    <a class="nav-link" href="ProjectUpdate.html">Project Update</a>
+                    <a class="nav-link" href="TeamUpdate.html">Team Update</a>
+                    <a class="nav-link" href="TemplateCenter.html">Template Center</a>
+                    <a class="nav-link" href="TemplateFilter.html">Template Filter</a>
+                    <a class="nav-link" href="TemplateInfo.html">Template More Info</a>
                 </nav>
+                
             </div>
         </div>
 
