--- a/TemplateInfo.html
+++ b/TemplateInfo.html
@@ -1077,7 +1077,7 @@
                             class="hide-text">Create
                             Space</span></a>
                 </li>
-                
+
             </ul>
         </aside>
         <div class="inbox-page">
@@ -1240,8 +1240,164 @@
                         </div>
                     </div>
                 </div>
+                <div class="templates_more_info">
+                    <button type="button" class="btn d-none" id="templates_more_info" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal7">
+                        Launch demo modal
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal7" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header d-flex justify-content-between">
+                                    <div>
+                                        <h5 class="modal-title" id="exampleModalLabel">
+                                            <img src="./assets/images/home/backspace.svg" alt=""> Back
+                                        </h5>
+                                    </div>
+                                    <div class="mt-2">
+                                        <h5>Template Center</h5>
+                                    </div>
+                                    <div>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                </div>
+
+
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <!-- Main Content Section -->
+                                        <div class="col-sm-9">
+                                            <div class="d-flex justify-content-between flex-wrap">
+                                                <!-- Main Content Header and Button -->
+                                                <div class="d-flex user_title flex-wrap">
+                                                    <div class="mt-3">
+                                                        <img src="./assets/images/home/socialMediaCheck.svg"
+                                                            width="63px" alt="">
+                                                    </div>
+                                                    <div class="d-flex gap-2">
+                                                        <div>
+                                                            <div class="mt-3">
+                                                                <h3>Social Media Content Plan</h3>
+                                                                <div class="d-flex profile_description">
+                                                                    <p>Complexity:</p>
+                                                                    <span>Beginner</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="mt-4">
+                                                            <img src="./assets/images/home/menu_dot.svg" alt="">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class=" mt-3">
+                                                    <div>
+                                                        <button type="button" class="btn  mx-2">Use
+                                                            Template</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!-- Additional Content Section -->
+                                            <div class="mt-4">
+                                                <div class="row border border-1 rounded-4">
+                                                    <div class="col-sm-4">
+                                                        <div class="pb-3 pt-3  rounded-3 Social_card">
+                                                            <img src="./assets/images/home/SocialMediaContent.svg"
+                                                                width="90%" height="90%" alt="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-8 card_detail my-2">
+                                                        <h3>Template Description</h3>
+                                                        <p>A Social Media Content Plan ensures that you post on your
+                                                            social media pages
+                                                            consistently by laying out your posts ahead of time. Use
+                                                            this ClickUp Social Media
+                                                            Content Plan template to make your life easier when it
+                                                            comes to the ideation and
+                                                            creation of social media posts.</p>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                            <div class="content_three mt-4">
+                                                <h3> Template includes</h3>
+
+
+
+
+
+
+
+                                                <div class="d-flex border border-1 rounded-3 p-2 gap-3">
+                                                    <img src="./assets/images/home/customize_icon.svg" alt="">
+                                                    <div class="w-100 d-flex justify-content-between">
+                                                        <div>
+                                                            <h3>Custom Fields</h3>
+                                                            <select name="Member" id="Member"
+                                                                class="col-12 border-0 select-list">
+                                                                <option value="1">5 Custom Fields included</option>
+                                                                <option value="2">Member</option>
+                                                                <option value="3">Member</option>
+                                                                <option value="4">Member</option>
+                                                                <option value="5">Member</option>
+                                                            </select>
+                                                        </div>
+                                                        <img src="/assets/images/home/left_side.svg" alt="">
+                                                    </div>
+                                                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                            </div>
+
+                                        </div>
+
+                                        <!-- Sidebar Content Section -->
+                                        <div class="col-sm-3 ">
+                                            <div class="border border-1 content_two rounded-3 p-2 mt-3">
+                                                <div class="d-flex justify-content-between">
+                                                    <div class="border border-1 rounded-3 py-3 px-1 "><img
+                                                            src="./assets/images/logo.png" width="50px" alt="">
+                                                    </div>
+                                                    <button class="btn button-verified">Verified</button>
+                                                </div>
+                                                <h3 class="mt-3">By ClickUp</h3>
+                                                <p>This template was built by the ClickUp Crew!</p>
+                                            </div>
+                                            <div class="sidear_content_two mt-3">
+                                                <h4>CREATED DATE</h4>
+                                                <p>December 12, 2022</p>
+                                            </div>
+                                            <div class="sidear_content_two">
+                                                <h4>USED</h4>
+                                                <p>15.2K times</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -1284,6 +1440,11 @@
             var reminderTab = new bootstrap.Tab(document.querySelector('#Doc-tab'));
             reminderTab.show();
         }
+        $(document).ready(function(){
+            $('#templates_more_info').click();
+        })
+
+
     </script>
     <script src="./js/script.js"></script>
 
