--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             </div>
             <div class="tab-pane" id="milestone5" role="tabpanel" aria-labelledby="milestone5-tab">
                 <nav class="nav justify-content-center  ">
-                    <a class="nav-link" href="SettingPage.html">Setting</a>
+                    <a class="nav-link" href="Spaces.html">Spaces</a>
+                    <a class="nav-link" href="CreateSpaces.html">Create Spaces</a>
                 </nav>
-
-            </div>
+             </div>
         </div>
 
 
